- -PAUTOACTIVATE=all activates all factories automatically
- Add vector versions of GetCalib to JCalibration API to allow access
  to calibration constants while maintaining position order of source
- Add RUNNUMBER configuration parameter that can be used to override
  the event source supplied run number.
- Added event barrier mechanism (set JEvent::sequential flag in JEventSource)


Changes in version 0.7.2
- Use cache for JGeometryXML::Get(string xpath, string &sval)
  so many-thread process startups are much faster
- Fixed bug where $JANA_HOME/plugins was not automatically searched
- Use THREAD_TIMEOUT for first event also if it is larger than
  THREAD_TIMEOUT_FIRST_EVENT
- Set object pointer to NULL in GetSingle() unless only one object exits
  Also, added optional 3rd argument to supress throwing exception
- Return useful info for "host info" from Linux servers using janactl
- Verify md5 checksum for all resources before using them
- Fixed bug where very long, multi-threaded jobs would terminate due
  to a timer running out.
- Added methods to allow manipulation of the factory call stack so that
  janadot will draw correct relationships. (Needed for GlueX DAQ plugin)

Changes in version 0.7.1p3
- The 0.7.1p2 was missing some of the changes in 0.7.1p1 due to
  some strange error. This corrects that. DON'T USE 0.7.1p2 !!

Changes in version 0.7.1p2
- Fixed bug (hopefully for good this time) that caused programs
  to seg. fault at very end if multiple plugins were used 

Changes in version 0.7.1p1
- Fixed bug in JResourceManager that caused seg. faults if USER
  environment not set and to always use "jana" if it is.
- Moved remnants of autoconf (configure, m4, reconf, ...) into BMS
  to get them out of the way since they are all deprecated.
- Install scripts into bin
- Fixed mkplugin and mkfactory_plugin scripts to work with scons
- Add symbolic link to src directory in installation directory

Changes in version 0.7.1

- Fixed bug that broke janadot