@@ -33,8 +33,10 @@ class JEventProcessor{
 		static const char* static_className(void){return "JEventProcessor";}
 		
 		virtual jerror_t init(void);						///< Called once at program start.
-		virtual jerror_t brun(JEventLoop *eventLoop, int runnumber);	///< Called everytime a new run number is detected.
-		virtual jerror_t evnt(JEventLoop *eventLoop, int eventnumber);	///< Called every event.
+		virtual jerror_t brun(JEventLoop *eventLoop, int runnumber);	///< DEPRECATED. Use the uint32_t version instead
+		virtual jerror_t evnt(JEventLoop *eventLoop, int eventnumber);	///< DEPRECATED. Use the uint64_t version instead
+		virtual jerror_t brun(JEventLoop *eventLoop, uint32_t runnumber);	///< Called everytime a new run number is detected.
+		virtual jerror_t evnt(JEventLoop *eventLoop, uint64_t eventnumber);	///< Called every event.
 		virtual jerror_t erun(void);						///< Called everytime run number changes, provided brun has been called.
 		virtual jerror_t fini(void);						///< Called after last event of last event source has been processed.
 		
